kuard-with-storage.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuard
---
# kubectl create deploy --image gcr.io/kuar-demo/kuard-amd64:blue kuard --dry-run='client' -o yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kuard
  name: kuard
  namespace: kuard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      # @see: https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:blue
        name: kuard
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: kuard-data
          mountPath: /storage1
          # @see: https://kubernetes.io/docs/concepts/storage/volumes/#using-subpath
          subPath: storage-a
        - name: kuard-data
          mountPath: /storage2
          # @see: https://kubernetes.io/docs/concepts/storage/volumes/#using-subpath
          subPath: storage-b
        - name: cache-volume
          mountPath: /cache
        - name: secret-volume
          mountPath: /secret
          readOnly: true
      volumes:
      - name: kuard-data
        persistentVolumeClaim:
          claimName: kuard-pvc
      # @see: https://kubernetes.io/docs/concepts/storage/volumes/#emptydir
      - name: cache-volume
        #emptyDir: {}
        emptyDir:
          medium: "Memory"
      # @see: https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-files-from-a-pod
      - name: secret-volume
        secret:
          secretName: kuard-auth
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kuard
  name: kuard
  namespace: kuard
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kuard
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  namespace: kuard
  # @see: https://kubernetes.github.io/ingress-nginx/examples/auth/basic/
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: kuard-auth
    nginx.ingress.kubernetes.io/auth-realm: 'You shall not pass!'
spec:
  ingressClassName: nginx
  rules:
  - host: kuard.k8sws.gke
    http:
      paths:
      - backend:
          service:
            name: kuard
            port:
              name: http
        path: /
        pathType: Prefix
